tests/passes/well-formed/ref-incorrect-name.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/ref-incorrect-name.futil
32 |      invoke f[m1 = k1]()();
   |               ^^ Malformed Control: foo does not have external cell named m1
